[package]
name = "bulldozer_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
csv = "1.3.0"
linfa = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
linfa-trees = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
polars = { version = "0.43.1", features = ["csv", "dtype-categorical", "dtype-datetime", "lazy", "mode", "strings"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite"] }
